# relx

./: .clang-format  .clang-tidy  .cursorrules  .gitignore  CMakeLists.txt  CODING_STANDARDS.md  CONTRIBUTING.md  DB_CONNECTION_API.md  Doxyfile  LICENSE  Makefile  PLAN.md  README.md  conanfile.txt  docker-compose.yml
.github/workflows/: ci.yml  docs.yml
cmake/: CodeCoverage.cmake  relxConfig.cmake.in
docker-init/: 01-create-database.sql
docs/: ASYNC_DB_CONNECTION.md  Gemfile  README.md  TEACH_ME_SQL.md  _config.yml  advanced-examples.md  contributing.md  development.md  error-handling.md  future_schema_features.md  index.html  index.md  migrations.md  performance.md  query-README.md  query-building.md  result-parsing.md  schema-definition.md  streaming-results.md
docs/_layouts/: default.html
docs/assets/css/: style.scss
examples/: CMakeLists.txt  README.md  delete_example.cpp  improved_schema.cpp  postgresql_example.cpp  query_example.cpp  result_example.cpp  run_postgresql_example.sh  schema_example.cpp
include/relx/: connection.hpp  migrations.hpp  postgresql.hpp  query.hpp  results.hpp  schema.hpp  utility.hpp
include/relx/connection/: connection.hpp  meta.hpp  pgsql_async_wrapper.hpp  postgresql_async_connection.hpp  postgresql_async_streaming_source.hpp  postgresql_connection.hpp  postgresql_connection_pool.hpp  postgresql_errors.hpp  postgresql_statement.hpp  postgresql_streaming_source.hpp  sql_utils.hpp  transaction_guard.hpp
include/relx/migrations/: command_line_tools.hpp  constraint_operations.hpp  core.hpp  diff.hpp
include/relx/query/: arithmetic.hpp  column_expression.hpp  condition.hpp  core.hpp  date.hpp  date_concepts.hpp  delete.hpp  function.hpp  helpers.hpp  insert.hpp  literals.hpp  meta.hpp  operators.hpp  schema_adapter.hpp  select.hpp  update.hpp  value.hpp
include/relx/results/: lazy_result.hpp  result.hpp  streaming_result.hpp
include/relx/schema/: autoincrement.hpp  chrono_traits.hpp  (+11 more)
include/sqllib/: connection.hpp  postgresql.hpp  query.hpp  results.hpp  schema.hpp  sqlite.hpp
src/: CMakeLists.txt  main.cpp
src/connection/: pgsql_async_wrapper.cpp  postgresql_async_connection.cpp  postgresql_connection.cpp  postgresql_connection_pool.cpp  postgresql_errors.cpp  postgresql_statement.cpp  sqlite_connection.cpp
src/migrations/: CMakeLists.txt  command_line_tools.cpp  diff.cpp
src/postgres/: CMakeLists.txt
src/postgres/connection/: pgsql_async_wrapper.cpp  postgresql_async_connection.cpp  postgresql_async_streaming_source.cpp  postgresql_connection.cpp  postgresql_connection_pool.cpp  postgresql_errors.cpp  postgresql_statement.cpp  postgresql_streaming_source.cpp  sql_utils.cpp
test/: CMakeLists.txt  query_test.cpp  static_assert_tests.cpp  type_safety_test.cpp
test/connection/: dto_mapping_test.cpp  postgresql_api_test.cpp  postgresql_async_streaming_test.cpp  postgresql_async_wrapper_test.cpp  postgresql_binary_test.cpp  postgresql_connection_pool_test.cpp  postgresql_connection_test.cpp  postgresql_placeholder_test.cpp  postgresql_statement_test.cpp  postgresql_streaming_test.cpp  postgresql_typed_params_test.cpp
test/migrations/: test_command_line_tools.cpp  test_migrations.cpp
test/postgres_integration/: async_dto_mapping_test.cpp  basic_integration_test.cpp  connection_pool_integration_test.cpp  date_time_integration_test.cpp  dml_integration_test.cpp  dto_mapping_integration_test.cpp  join_integration_test.cpp  postgresql_integration_test.cpp  query_integration_test.cpp  schema_definitions.hpp  schema_integration_test.cpp
test/query/: advanced_query_test.cpp  aggregate_test.cpp  arithmetic_test.cpp  basic_query_test.cpp  basic_select_test.cpp  case_expression_test.cpp  condition_test.cpp  data_type_test.cpp  date_multi_clock_test.cpp  date_test.cpp  delete_query_test.cpp  distinct_select_test.cpp  edge_case_test.cpp  insert_query_test.cpp  join_test.cpp  query_test.cpp  select_all_test.cpp  string_function_test.cpp  test_common.hpp  update_query_test.cpp
test/result/: lazy_parsing_test.cpp  result_test.cpp
test/schema/: check_constraint_test.cpp  column_like_test.cpp  column_test.cpp  complex_schema_test.cpp  composite_foreign_key_test.cpp  concepts_test.cpp  constraint_alias_test.cpp  custom_column_types_test.cpp  default_value_test.cpp  fixed_string_test.cpp  foreign_key_test.cpp  index_test.cpp  optional_column_test.cpp  primary_key_test.cpp  table_test.cpp  timezone_parsing_test.cpp  unique_constraint_test.cpp
test/types/: type_safety_test.cpp
test/utility/: throw_if_failed_test.cpp
tests/: advanced_query_test.cpp  basic_concepts_test.cpp  break_the_library_test.cpp  check_constraint_test.cpp  column_test.cpp  complex_schema_test.cpp  composite_foreign_key_test.cpp  concepts_test.cpp  concepts_without_gtest.cpp  constraint_alias_test.cpp  custom_column_types_test.cpp  default_value_test.cpp  foreign_key_test.cpp  index_test.cpp  optional_column_test.cpp  primary_key_test.cpp  query_test.cpp  result_test.cpp  static_assert_tests.cpp  table_test.cpp  unique_constraint_test.cpp
tests/connection/: postgresql_api_test.cpp  postgresql_binary_test.cpp  postgresql_connection_pool_test.cpp  postgresql_connection_test.cpp  postgresql_statement_test.cpp  postgresql_typed_params_test.cpp  sqlite_connection_test.cpp  transaction_guard_test.cpp
tests/query/: advanced_query_test.cpp  aggregate_test.cpp  basic_select_test.cpp  case_expression_test.cpp  concise_api_test.cpp  condition_test.cpp  data_type_test.cpp  delete_query_test.cpp  distinct_select_test.cpp  edge_case_test.cpp  insert_query_test.cpp  join_test.cpp  query_test.cpp  select_all_test.cpp  string_function_test.cpp  test_common.hpp  update_query_test.cpp
tests/schema/: autoincrement_test.cpp  check_constraint_test.cpp  column_test.cpp  complex_schema_test.cpp  composite_foreign_key_test.cpp  concepts_test.cpp  constraint_alias_test.cpp  custom_column_types_test.cpp  default_value_test.cpp  fixed_string_test.cpp  foreign_key_test.cpp  index_test.cpp  optional_column_test.cpp  primary_key_test.cpp  table_test.cpp  unique_constraint_test.cpp
(+35 files in other folders)
